- Fixed bug #48227 (NumberFormatter::format leaks memory). (Felipe)
- Fixed bug #48200 (compile failure with mbstring.c when 
  --enable-zend-multibyte is used). (Jani)
- Fixed bug #48188 (Cannot execute a scrollable cursors twice with
  PDO_PGSQL). (Matteo)
- Fixed bug #38802 (max_redirects and ignore_errors).
  (patch by datibbaw@php.net)
- Fixed potential segfault with converting phars containing metadata to other
  formats (Greg).


07 May 2009, PHP 5.3.0 RC 2
- Upgraded bundled sqlite to version 3.6.13. (Ilia)
- Upgraded bundled PCRE to version 7.9. (Nuno)
- Upgraded bundled libmagic to 5.02 in the fileinfo extension. (Scott)

- Undeprecated ticks. (Arnaud)

- Improved IMAP support (Pierre):
  . Added imap_gc() to clear the imap cache
  . Added imap_utf8_to_mutf7() and imap_mutf7_to_utf8()

- Implemented FR #41712 (curl progress callback: CURLOPT_PROGRESSFUNCTION).
  (sdteffen[at]gmail[dot].com, Pierre)
- Implemented FR #47739 (Missing cURL option do disable IPv6). (Pierre)
- Implemented FR #39637 (Missing cURL option CURLOPT_FTP_FILEMETHOD). (Pierre)

- Added timezone_version_get() to retrieve the version of the used timezone
  database. (Derick)
- Added 'n' flag to fopen to allow passing O_NONBLOCK to the underlying
  open(2) system call. (Mikko)
- Added "dechunk" filter which can decode HTTP responses with chunked
  transfer-encoding. HTTP streams use this filter automatically in case
  "Transfer-Encoding: chunked" header is present in response. It's possible to
  disable this behaviour using "http"=>array("auto_decode"=>0) in stream
  context. (Dmitry)
- Added ability to throw exceptions from SQLite3 instead of warnings. (Scott)
- Added startup notices for deprecated ini settings. (Kalle)

- Fixed bug #48185 (warning: value computed is not used in
  pdo_sqlite_stmt_get_col line 271). (Matteo)
- Fixed bug #48087 (call_user_method() invalid free of arguments). (Felipe)
- Fixed bug #48060 (pdo_pgsql - large objects are returned as empty). (Matteo)